Added New Flow Chart Tools

--- a/flowChartMaker/uIFlowForgerEnhancer.html
+++ b/flowChartMaker/uIFlowForgerEnhancer.html
@@ -17,8 +17,8 @@
     
     <style>
         :root {
-            --primary: #4f46e5;
-            --secondary: #7c3aed;
+            --primary-color: #e39d4e;
+            --secondary-color: #af1e1e;
             --success: #10b981;
             --warning: #f59e0b;
             --danger: #ef4444;
