--- a/mdFileWriter/liveCommonMarkdown.html
+++ b/mdFileWriter/liveCommonMarkdown.html
@@ -175,6 +175,7 @@
       display: flex;
       overflow: hidden;
       position: relative;
+      max-width: 55%;
     }
     
     .editor-panel {
