Updated Ui design

--- a/mdFileWriter/liveCommonMarkdown.html
+++ b/mdFileWriter/liveCommonMarkdown.html
@@ -504,7 +504,8 @@
           <i class="fas fa-download"></i> .md
         </button>
         <button class="btn-toolbar" onclick="exportHTML()" title="Export HTML">
-          <i class="fas fa-download"></i> .html
+          <i class="fas fa-download"></i>
+          <i class="fab fa-html5"></i>
         </button>
         <button class="btn-toolbar" onclick="copyHTML()" title="Copy HTML">
           <i class="fas fa-copy"></i>
