--- a/mdFileWriter/liveCommonMarkdown.html
+++ b/mdFileWriter/liveCommonMarkdown.html
@@ -20,7 +20,9 @@
       --text-muted: #ffffff;
     }
     
-    * { box-sizing: border-box; }
+    * {
+        box-sizing: border-box; 
+    }
     
     body {
       margin: 0;
