--- a/mdFileWriter/liveCommonMarkdown.html
+++ b/mdFileWriter/liveCommonMarkdown.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>We1 | Markdown Editor</title>
+  <title>We1 | LIVE Markdown Editor</title>
   <link rel="icon" href="../logo.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.0/darkly/bootstrap.min.css"/>
