--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>🔒 Password Storage App</title>
+<title>Simple Password Storage App</title>
 
 <!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -265,10 +265,10 @@
             <i class="fa fa-refresh"></i> Master Password
           </button>
           <button id="lockBtn" class="btn btn-danger btn-sm">
-            <i class="fa fa-lock"></i> Lock
+            <i class="fa fa-lock"></i>
           </button>
           <button id="infoBtn" class="btn btn-primary btn-sm">
-            <i class="fa fa-info"></i> Info
+            <i class="fa fa-info"></i>
           </button>
             <button id="exportBtn" class="btn btn-success btn-sm">
               <i class="fa fa-download"></i> Export
@@ -360,7 +360,10 @@
             </div>
             <div class="col-md-2">
               <div class="input-group">
-                <input id="secret" class="form-control" placeholder="Secret Code">
+                <input id="secret" list="secretList" class="form-control" placeholder="Secret Code">
+                <datalist id="secretList">
+                  <option value="-">
+                </datalist>
               <span id="genBtn" class="btn btn-outline-secondary" title="Secret Code"><i class="fa fa-user-secret"></i></span>
             </div>
             </div>
@@ -372,12 +375,12 @@
             </div>
             <div class="col-md-6">
               <div class="input-group">
-                <input id="message" list="msgList" class="form-control" placeholder="Message">
+                <input id="message" list="msgList" class="form-control" placeholder="Secret Message Remember Context">
                 <span id="genBtn" class="btn btn-outline-secondary" title="Message"><i class="fa fa-sticky-note"></i></span>
               </div>
             </div>
             <!-- The dropdown suggestion list -->
-              <datalist id="ssgList">
+              <datalist id="msgList">
                 <option value="No Password/Secret Code">
               </datalist>
             <div class="col-md-6">
@@ -619,7 +622,7 @@ function renderFolders(){
     div.innerHTML = `
       <span class="folder-badge" style="background:${f.color}"></span>
       <span class="flex-grow-1">${escapeHtml(f.name)}</span>
-      ${f.id!=='all' ? `<button class="btn btn-sm btn-danger delFolder" data-id="${f.id}"><i class="fa fa-trash"></i></button>` : ''}
+      ${(f.id!=='all' || f.id!=='other') ? `<button class="btn btn-sm btn-danger delFolder" data-id="${f.id}"><i class="fa fa-trash"></i></button>` : ''}
     `;
     
     div.onclick = function(e){
@@ -756,7 +759,7 @@ document.getElementById('saveBtn').onclick = function(){
   const message = document.getElementById('message').value;
   const additionalInfo = document.getElementById('additionalInfo').value;
 
-  if(!site || !username || !password || !secret) {
+  if(!site || !username) {
     return alert('Fill: Website, Username, Password, Secret');
   }
 
@@ -873,11 +876,10 @@ document.addEventListener('click', function(e){
         <tr><th>Master Password</th><td>Whole vault is encrypted with master password</td></tr>
         <tr><th>Secret</th><td>Secret is used to decrypt password</td></tr>
         <tr>
-          <th>Export Process</th>
+          <th>Export/Import Process</th>
           <td>
             <ul>
-              <li>Export process is used to export vault</li>
-              <li>Export process is used to export vault</li>
+              <li>Export process is used to export vault and Import process is used to import vault</li>
             </ul>
           </td>
         </tr>
