Enhancements in Simple Password Storage

--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -342,41 +342,41 @@
             </div>
             <div class="col-md-2">
               <div class="input-group">
+                <span id="genBtn" class="btn btn-outline-secondary" title="URL"><i class="fa fa-globe"></i></span>
                 <input id="url" class="form-control" placeholder="Website URL">
-              <span id="genBtn" class="btn btn-outline-secondary" title="URL"><i class="fa fa-globe"></i></span>
             </div>
             </div>
             <div class="col-md-2">
               <div class="input-group">
+                <span id="genBtn" class="btn btn-outline-secondary" title="Username"><i class="fa fa-user"></i></span>
                 <input id="username" class="form-control" placeholder="Username">
-              <span id="genBtn" class="btn btn-outline-secondary" title="Username"><i class="fa fa-user"></i></span>
             </div>
             </div>
             <div class="col-md-2">
               <div class="input-group">
+                <span id="genBtn" class="btn btn-outline-secondary" title="Password"><i class="fa fa-key"></i></span>
                 <input id="password" class="form-control" placeholder="Original Password">
-              <span id="genBtn" class="btn btn-outline-secondary" title="Password"><i class="fa fa-key"></i></span>
             </div>
             </div>
             <div class="col-md-2">
               <div class="input-group">
+                <span id="genBtn" class="btn btn-outline-secondary" title="Secret Code"><i class="fa fa-user-secret"></i></span>
                 <input id="secret" list="secretList" class="form-control" placeholder="Secret Code">
                 <datalist id="secretList">
                   <option value="-">
                 </datalist>
-              <span id="genBtn" class="btn btn-outline-secondary" title="Secret Code"><i class="fa fa-user-secret"></i></span>
             </div>
             </div>
             <div class="col-md-2">
               <div class="input-group">
+                <span id="genBtn" class="btn btn-outline-secondary" title="Folder"><i class="fa fa-folder"></i></span>
                 <select id="folderSelect" class="form-select"></select>
-              <span id="genBtn" class="btn btn-outline-secondary" title="Folder"><i class="fa fa-folder"></i></span>
             </div>
             </div>
             <div class="col-md-6">
               <div class="input-group">
-                <input id="message" list="msgList" class="form-control" placeholder="Secret Message Remember Context">
                 <span id="genBtn" class="btn btn-outline-secondary" title="Message"><i class="fa fa-sticky-note"></i></span>
+                <input id="message" list="msgList" class="form-control" placeholder="Secret Message Remember Context">
               </div>
             </div>
             <!-- The dropdown suggestion list -->
@@ -385,8 +385,8 @@
               </datalist>
             <div class="col-md-6">
               <div class="input-group">
-                <input id="additionalInfo" class="form-control" placeholder="Additional Info">
                 <span id="genBtn" class="btn btn-outline-secondary" title="Additional Info"><i class="fa fa-sticky-note"></i></span>
+                <input id="additionalInfo" class="form-control" placeholder="Additional Info">
               </div>
             </div>
             <div class="row g-2">
@@ -402,10 +402,10 @@
         <div class="controls">
           <input id="search" class="form-control" placeholder="Search..." style="max-width:300px;">
           <select id="filterFolder" class="form-select" style="max-width:200px;">
-            <option value="all">Filter Folder</option>
+            <option value="all">--Filter Folder--</option>
           </select>
           <select id="sortDate" class="form-select" style="max-width:200px;">
-            <option value="">Sort by Date</option>
+            <option value="">--Sort by Date--</option>
             <option value="new">Newest First</option>
             <option value="old">Oldest First</option>
           </select>
