--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -325,10 +325,8 @@
           <div class="row g-2">
             <div class="col-md-2">
               <div class="input-group">
+                <span id="genBtn" class="btn btn-outline-secondary" title="Website" erasecontextfor="site"><i class="fa fa-cloud"></i></span>
                 <input id="site" list="siteList" class="form-control" placeholder="Website Name" erasecontenttriggerfrom="site">
-                <span id="genBtn" class="btn btn-outline-secondary" title="Website" erasecontextfor="site">
-                  <i class="fa fa-cloud"></i>
-                </span>
               </div>
 
               <!-- The dropdown suggestion list -->
@@ -386,7 +384,7 @@
             <div class="col-md-6">
               <div class="input-group">
                 <span id="genBtn" class="btn btn-outline-secondary" title="Additional Info" erasecontextfor="additionalInfo"><i class="fa fa-sticky-note"></i></span>
-                <input id="additionalInfo" class="form-control" placeholder="Additional Info" erasecontenttriggerfrom="additionalInfo">
+                <textarea id="additionalInfo" class="form-control" placeholder="Additional Info" erasecontenttriggerfrom="additionalInfo" style="height: 40.8px;"></textarea>
               </div>
             </div>
             <div class="row g-2">
