--- a/simplePasswordBank/index.html
+++ b/simplePasswordBank/index.html
@@ -450,7 +450,7 @@
         <h5 class="modal-title">Details</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
-      <div class="modal-body" id="viewModalBody"></div>
+      <div class="modal-body" id="viewModalBody" style="overflow: auto;"></div>
       <div class="modal-footer">
         <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
